[UTF-8][Japanese]

*Ver3.0 RC1 : 2015/xx/xx

-コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMでも大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
-コメント欄でタブや空白が有効になりました。{{&amp;}}等の実体参照が無効になりました。
-コメント本文の加工処理をJavaScript側に変更しました。
-コンテンツタイプで検索できるようになりました。
-タグなし記事を検索できるようになりました。
-タグや記事タイトル中の{{&}}をエスケープするようにしました。
-検索のデフォルトを「全文」に変更しました。
-記事一覧とコメント一覧画面でソートできるようになりました。
-記事一覧画面に記事種類を出力するようにしました。（[http://adiary.blog.abk.nu/0366#com:Thanks to 手石]）
-最近の記事一覧と過去ログに、コンテンツを含めない設定を追加しました。（Thanks to 手石]）
-印刷用リンクを別ページで開く設定ができるようにしました。（Thanks to 手石]）
-コメント欄に{{&gt;}}等の実体参照文字列を書き込んだ時、そのまま表示されるように変更しました。（Thanks to 手石]）
-[g:respond.js]から[g:css3-mediaqueries.js]に変更しました。
-シンタックスハイライトのテーマを変更しました。またhighlight.jsのロード方法も変更しました。
-【テーマ】配色カスタマイズ画面で、色を濃くしたり明るくしたりできるようにしました。((色を薄くまたは暗くしかできなかったという（苦笑）))
-【テーマ】あらゆる出力から{<input type="submit">, <input type="button">}を廃止しました。
-【テーマ】satsuki2系テーマで、サイドバーサイズを固定にしました。
-【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
-【テーマ】CSSでの #hatena-body の高さ自動設定機能に min-height が効くようになりました。
-【テーマ】テーマの表示テスト画面を作りました。
-【fix】adiary形式でexportするとき、入力テキストに「&lt;」などの実体参照が正しくエスケープされていなかった。((Version2時代からあったバグのようですのでたぶんずっと最初から……。))
-【fix】pkey保存インポートをすると、コンテンツツリーを復元できない。
-【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
-【fix】行連結記法が使えない。((β3直後に完全にエンバグしてました。必要処理をなぜか１行削除するというコピペ操作ミスだと思われます、恥ずかしい（汗）))
-【fix】たまにタグ一覧やコンテンツ一覧でキャッシュされた情報を読み込んでしまう。
-【fix】Markdown記法でインラインのソースコード記述で、{<, >, &}がうまくエスケープされない。（Thanks to 手石]）
-【fix】最新Perl（5.20で確認）でMySQL, PostgreSQL運用時、データベースに格納される文字列が[em:通常のUTF8文字列にならない]。（[http://adiary.blog.abk.nu/0367:問題の詳細]）
-【fix】コメントが許可されていない FrontPage がある状態でデザイン編集を保存すると、コメント投稿フォームが消える。
-【fix】コメントメール通知プラグインが動かなくなっていた。
-他多数

*Ver3.0β6 : 2015/05/17

-[bf:フッターの出力位置を変更しました]。
-記事編集画面から直接画像をアップロードできるようになりました。
-記事編集画面の入力部分にドラッグ＆ドロップしてファイルをアップロードできるようになりました。
-記事編集画面を洗練させました。
-FrontPage（固定トップページ）の時、記事タイトルをヘッダ出力しないように変更しました。
-システムモード非対応テーマを管理画面で使用しようとする時、警告を表示するようにした。
-表示パスワード機能やメンテナンスモードでの画面に、適切なHTTPステータスコードを設定した。
-スマホ判別に、BlackBerry と Windows Phone を加えました。
-コメント表示数の設定項目がなかったので修正。