@@ -123,7 +123,7 @@ div.iblk {
 
 <div id="custom-form">
 <div id="custom-functions">
-<@ifexec(1, begin)> <@>式解析デバッグ
+<@ifexec(0, begin)> <@>式解析デバッグ
 <div>
 	式 : <input type="text" class="w300" id="expression"><button id="parse" type="button">解析</button><br>
 	答 : <input type="text" class="w300" id="solution" readonly>
