@@ -118,16 +118,16 @@ a.welcome-name { margin: 0px 4px 0px 4px; }
 /* 背景色（非選択色） */
 .dropdown-menu,
 .dropdown-menu>ul li {
-	background-color:	#ccccff;	/* $c=ddbg=main2 */
+	background-color:	#ccccff;	/* $c=ddbg = main */
 }
 /* 選択色 */
 .dropdown-menu>ul li:hover,
 .dropdown-menu>ul li.hover {
-	background-color:	#f0f0ff;	/* $c=ddhover=main2 + #222  */
+	background-color:	#f0f0ff;	/* $c=ddhover = auto:main  */
 }
 /* 枠線 */
 .dropdown-menu>ul li {
-	border-color:		#aac;	/* $c=ddborder=main2 - #222 */
+	border-color:		#aac;		/* $c=ddborder = auto:main */
 }
 /* 文字 */
 .dropdown-menu a:link,
@@ -138,7 +138,7 @@ a.welcome-name { margin: 0px 4px 0px 4px; }
 /* 矢印の色 */
 .dropdown-menu li ul li ul:before,
 .dropdown-menu.sp li ul:before {
-	border-left-color:	#338;	/* $c=ddarrow=link/2 */
+	border-left-color:	#338;	/* $c=ddarrow = auto:link */
 }
 .dropdown-menu:not(.sp) li:last-child:not(:first-child) ul li ul:before {
 	border-left-color:	transparent;
@@ -208,7 +208,7 @@ article, #article-body {
 
 /* 記事タイトル */
 article h2 {
-	background-color:	#adb8ff;		/* $c=main */
+	background-color:	#adb8ff;		/* $c=main2 = auto:main */
 	padding:		2px 8px 2px 8px;
 	font-size:		100%;
 	margin:			0px;
@@ -298,7 +298,7 @@ div.hatena-moduletitle {
 	margin:			0 0 0 0;
 	padding:		2px 0 2px 0;
 	text-align:		center;
-	background-color:	#adb8ff;		/* $c=main */
+	background-color:	#adb8ff;		/* $c=main2 */
 	border-bottom:		1px solid #6b75b8;	/* $c=border */
 	border-radius:		4px 4px 0px 0px;
 }
@@ -370,7 +370,7 @@ div.body h3 {
 	font-weight:		bold;
 	padding:		4px 0px 4px 8px;
 	border-left:		6px solid #6b75b8;	/* $c=border */
-	background-color:	#e8e8ff;		/* $c=h3bg=main2+#181818 */
+	background-color:	#e8e8ff;		/* $c=h3bg= auto:main */
 
 	border-radius:		0 6px 6px 0;
 	box-shadow:		4px 4px 2px 2px rgba(0,0,0, 0.4);
@@ -469,7 +469,7 @@ dt { font-weight:	bold; }
 	margin:			0px;
 	padding:		2px;
 	border-bottom:		1px solid #000;
-	background-color:	#ccf;		/* $c=main2 */
+	background-color:	#ccf;		/* $c=main */
 }
 
 /****************************************************************************/
@@ -484,7 +484,7 @@ dt { font-weight:	bold; }
 
 	border-radius:		8px;
 	border:			2px solid #6b75b8;	/* $c=border */
-	background-color:	#f4f4ff;		/* $c=combg=wikibg */
+	background-color:	#f4f4ff;		/* $c=combg= wikibg */
 	box-shadow:		4px 4px 3px 3px rgba(0,0,0, 0.3);
 }
 #com div.caption a {
@@ -659,16 +659,16 @@ button
 	border:			1px solid #66c;		/* $c=btnborder */
 	border-radius:		6px;
 	background-image:	linear-gradient(to bottom,	/* $c=_ */
-				#ddf,			/* $c=btnbg0 = auto:main2 */
-				#aaf);			/* $c=btnbg1 = auto:main2 */
+				#ddf,			/* $c=btnbg0 = auto:main */
+				#aaf);			/* $c=btnbg1 = auto:main */
 }
 button:hover
 {
 	border-radius:		6px;
 	cursor:			pointer;
 	background-image:	linear-gradient(to bottom,	/* $c=_ */
-				#eef,			/* $c=btnbghover0 = auto:main2 */
-				#ccf);			/* $c=btnbghover1 = auto:main2 */
+				#eef,			/* $c=btnbghover0 = auto:main */
+				#ccf);			/* $c=btnbghover1 = auto:main */
 
 }
 
@@ -676,7 +676,7 @@ button:disabled
 {
 	color:			#666;
 	background-image:	none;
-	background-color:	#aac;			/* $c=btndisable = auto:main2 */
+	background-color:	#aac;			/* $c=btndisable = auto:main */
 }
 
 /*--------------------------------------------------------------------
@@ -729,13 +729,13 @@ table.plugins button { margin: 0; }
 ●システム画面
 ---------------------------------------------------------------------*/
 article.system div.body {
-	background-color:	#eeeeff;		/* $c=sysartbg */
+	background-color:	#eeeeff;		/* $c=sysartbg = auto:wikibg */
 }
 article.system div.body {
 	padding-bottom:		1em;
 }
 article.system div.body h3 {
-	background-color:	#ccf;			/* $c=main2 */
+	background-color:	#ccf;			/* $c=main */
 }
 /*--------------------------------------------------------------------
 ●フォームの一般設定
@@ -811,7 +811,7 @@ span.edit-caption {
 article.edit span.tag {
 	font-size:		9pt;
 	color:			#600;
-	background-color:	#ccf;		/* $c=main2 */
+	background-color:	#ccf;		/* $c=main */
 	border-radius:		6px;
 	padding:		0px 4px;
 	margin-right:		0.5em;
@@ -877,7 +877,7 @@ article.edit span.tag:after {
 	line-height:		130%;
 }
 .ui-dialog .ui-widget-header {
-	background-color:	#adb8ff;		/* $c=main */
+	background-color:	#adb8ff;		/* $c=main2 */
 	font-weight:		bold;
 	font-size:		12pt;
 
@@ -921,7 +921,7 @@ article.jqueryui-tabs {
 .ui-tabs .ui-tabs-nav li {
 	border-radius:		8px;
 	border:			2px solid #6b75b8;	/* $c=border */
-	background-color:	#ccf;			/* $c=main2 */
+	background-color:	#ccf;			/* $c=main */
 }
 .ui-tabs .ui-tabs-nav li.ui-tabs-active {
 	border-bottom:		2px solid #eeeeff;	/* $c=sysartbg */
