@@ -2,6 +2,7 @@
 
 *Ver3.0 RC1 : 2015/xx/xx
 
+-[http://adiary.org/devman/theme/:テーマ開発マニュアル]をまとめました。
 -コメント欄のロボットSPAM対策を強化しました。((JavaScriptを解釈するロボットSPAMでも大丈夫だと思います。不可能ではないものの、かなり投稿しにくくなっています。))
 -コメント欄でタブや空白が有効になりました。{{&amp;}}等の実体参照が無効になりました。
 -コメント本文の加工処理をJavaScript側に変更しました。
@@ -22,6 +23,7 @@
 -【テーマ】satsuki2-multiside テーマを廃止してウィンドウ横幅によりマルチサイドバーにする satsuki2-resp に変更しました。
 -【テーマ】CSSでの #hatena-body の高さ自動設定機能に min-height が効くようになりました。
 -【テーマ】テーマの表示テスト画面を作りました。
+-【テーマ】テーマの配色可変対応をより作りやすくしました。
 -【fix】adiary形式でexportするとき、入力テキストに「&lt;」などの実体参照が正しくエスケープされていなかった。((Version2時代からあったバグのようですのでたぶんずっと最初から……。))
 -【fix】pkey保存インポートをすると、コンテンツツリーを復元できない。
 -【fix】その他の設定に、謎のデザインモジュール再インストールボタンがあった。
